perf: 获取文件列表接口
